Thu Sep 27 07:39:13 2007  Tanaka Akira  <akr@fsij.org>

	* bootstraptest/runner.rb (assert_finish): new method.

	* bootstraptest/test_knownbug.rb: add test for [ruby-dev:31866] using
	  assert_finish.

Thu Sep 27 04:46:31 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_associate_index): deal with ASCII compatible
	  flags.

	* encoding.c (rb_enc_check): allow ASCII compatible strings.

	* parse.y (rb_intern_str): use ASCII encoding for ASCII string.

	* string.c (rb_enc_str_coderange): check for code-range.

	* string.c (rb_str_modify): clear code-range flags.

	* string.c (rb_str_hash, rb_str_eql): ASCII compatible strings are
	  comparable.

	* include/ruby/encoding.h: added code-range flags.

Thu Sep 27 04:40:47 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_mark_set): new function to mark keys.

	* marshal.c (struct dump_arg, struct load_arg): added wrappers to mark
	  data and compat_tbl entries.  [ruby-dev:31870]

Thu Sep 27 03:17:41 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_waitpid): no needs to poll.  [ruby-dev:31871]

Wed Sep 26 20:11:46 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_knownbug.rb: remove a fixed test.

Wed Sep 26 20:00:12 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_knownbug.rb: move fixed tests.

	* bootstraptest/test_method.rb: ditto.

	* test/ruby/test_io.rb: ditto.

Wed Sep 26 19:36:26 2007  Koichi Sasada  <ko1@atdot.net>

	* eval.c (eval): fix to check stack overflow.
	  [ruby-dev:31850]

	* eval_intern.h, vm.h: move CHECK_STACK_OVERFLOW() macro.

Wed Sep 26 19:27:11 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (vm_throw): fix to move increment point.
	  [ruby-dev:31840]

Wed Sep 26 19:23:56 2007  Koichi Sasada  <ko1@atdot.net>

	* cont.c: Fiber as SemiCoroutine on default. [ruby-core:12146]

	* ext/fiber/fiber.c: enable Fiber#transfer.

Wed Sep 26 18:38:41 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
